--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -702,6 +702,8 @@ config SERIAL_NUM
 	help
 	  Provide a interface for reading CPU serial number
 
+config STATE_NOTIFIER
+        bool "State Notifier"
 
 source "drivers/soc/qcom/memshare/Kconfig"
 
