--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -705,6 +705,10 @@ config SERIAL_NUM
 config STATE_NOTIFIER
         bool "State Notifier"
 
+config STATE_HELPER
+        bool "State Helper"
+	depends on STATE_NOTIFIER
+
 source "drivers/soc/qcom/memshare/Kconfig"
 
 endif # ARCH_MSM
