--- a/drivers/soc/qcom/Makefile
+++ b/drivers/soc/qcom/Makefile
@@ -94,4 +94,5 @@ obj-$(CONFIG_TRACER_PKT) += tracer_pkt.o
 obj-$(CONFIG_MSM_VSENS) += vsens.o
 obj-$(CONFIG_SERIAL_NUM) += serial_num.o
 
-obj-$(CONFIG_STATE_NOTIFIER) += state_notifier.o
+obj-$(CONFIG_STATE_NOTIFIER)		+= state_notifier.o
+obj-$(CONFIG_STATE_HELPER)		+= state_helper.o
