--- a/arch/arm64/configs/kenzo_defconfig
+++ b/arch/arm64/configs/kenzo_defconfig
@@ -262,7 +262,7 @@ CONFIG_WCNSS_CORE_PRONTO=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_WCNSS_REGISTER_DUMP_ON_BITE=y
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=m
+# CONFIG_INPUT_EVBUG is not set
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21=n
@@ -283,7 +283,7 @@ CONFIG_INPUT_HBTP_INPUT=y
 CONFIG_SENSORS_MPU6050=y
 CONFIG_SENSORS_LIS3DH=y
 CONFIG_INPUT_UINPUT=y
-CONFIG_INPUT_GPIO=m
+# CONFIG_INPUT_GPIO is not set
 CONFIG_SENSORS_MMC3416X=y
 CONFIG_SENSORS_AKM09911=y
 CONFIG_SENSORS_AKM8963=y
@@ -304,7 +304,7 @@ CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM=y
 CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_ADSPRPC=y
-CONFIG_MSM_RDBG=m
+# CONFIG_MSM_RDBG is not set
 CONFIG_I2C=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MSM_V2=y
@@ -315,7 +315,7 @@ CONFIG_HAS_DMA=y
 CONFIG_QCOM_SPS_DMA=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
-CONFIG_SPI_SPIDEV=m
+# CONFIG_SPI_SPIDEV is not set
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
@@ -446,8 +446,8 @@ CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_BLOCK_MINORS=32
-CONFIG_MMC_TEST=m
-CONFIG_MMC_BLOCK_TEST=m
+# CONFIG_MMC_TEST is not set
+# CONFIG_MMC_BLOCK_TEST is not set
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_MSM=y
@@ -594,11 +594,11 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_MSM_PACMAN=y
 CONFIG_MSM_TEST_PACMAN=y
 CONFIG_QMI_ENCDEC=y
-CONFIG_MOBICORE_SUPPORT=m
-CONFIG_MOBICORE_API=m
+# CONFIG_MOBICORE_SUPPORT is not set
+# CONFIG_MOBICORE_API is not set
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_CORE_CTL_HELPER=y
-CONFIG_MSM_BUSPM_DEV=m
+# CONFIG_MSM_BUSPM_DEV is not set
 CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=n
 CONFIG_DEVFREQ_SPDM=y
 CONFIG_SPDM_SCM=y
