Should fix mouse pointer in TWRP

--- a/arch/arm64/configs/kenzo_defconfig
+++ b/arch/arm64/configs/kenzo_defconfig
@@ -19,6 +19,7 @@ CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_INPUT_MOUSE is not set
+CONFIG_INPUT_MOUSEDEV=n
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_RD_BZIP2=y
@@ -277,9 +278,9 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV=n
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=n
 CONFIG_SECURE_TOUCH=y
 CONFIG_TOUCHSCREEN_BU21150=y
-CONFIG_INPUT_MT_WRAPPER=y
+# CONFIG_INPUT_MT_WRAPPER is not set
 CONFIG_INPUT_MISC=y
-CONFIG_INPUT_HBTP_INPUT=y
+# CONFIG_INPUT_HBTP_INPUT is not set
 CONFIG_SENSORS_MPU6050=y
 CONFIG_SENSORS_LIS3DH=y
 CONFIG_INPUT_UINPUT=y
