--- a/arch/arm64/configs/kenzo_defconfig
+++ b/arch/arm64/configs/kenzo_defconfig
@@ -24,6 +24,7 @@ CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
+CONFIG_RD_LZ4=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_KALLSYMS_ALL=y
@@ -465,6 +466,7 @@ CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ZSMALLOC=y
 CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
@@ -668,6 +670,8 @@ CONFIG_IOSCHED_SIO=y
 CONFIG_HZ_300=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_STATE_HELPER=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
 #
 # CPU
 #
