--- a/arch/arm64/configs/kenzo_defconfig
+++ b/arch/arm64/configs/kenzo_defconfig
@@ -179,7 +179,7 @@ CONFIG_IP6_NF_RAW=y
 CONFIG_BRIDGE_NF_EBTABLES=y
 CONFIG_BRIDGE_EBT_BROUTE=y
 CONFIG_L2TP=y
-CONFIG_L2TP_DEBUGFS=y
+# CONFIG_L2TP_DEBUGFS is not set
 CONFIG_L2TP_V3=y
 CONFIG_L2TP_IP=y
 CONFIG_L2TP_ETH=y
@@ -201,7 +201,7 @@ CONFIG_NET_EMATCH_TEXT=y
 CONFIG_NET_CLS_ACT=y
 CONFIG_RMNET_DATA=y
 CONFIG_RMNET_DATA_FC=y
-CONFIG_RMNET_DATA_DEBUG_PKT=y
+# CONFIG_RMNET_DATA_DEBUG_PKT is not set
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
@@ -437,8 +437,8 @@ CONFIG_USB_PHY=y
 CONFIG_USB_MSM_SSPHY_QMP=y
 CONFIG_MSM_QUSB_PHY=y
 CONFIG_USB_GADGET=y
-CONFIG_USB_GADGET_DEBUG_FILES=y
-CONFIG_USB_GADGET_DEBUG_FS=y
+# CONFIG_USB_GADGET_DEBUG_FILES is not set
+# CONFIG_USB_GADGET_DEBUG_FS is not set
 CONFIG_USB_CI13XXX_MSM=y
 CONFIG_USB_DWC3_MSM=y
 CONFIG_USB_G_ANDROID=y
