--- a/arch/arm64/configs/cyanogenmod_kenzo_defconfig
+++ b/arch/arm64/configs/cyanogenmod_kenzo_defconfig
@@ -562,6 +562,7 @@ CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
+CONFIG_EXFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
