--- a/arch/arm64/configs/cyanogenmod_kenzo_defconfig
+++ b/arch/arm64/configs/cyanogenmod_kenzo_defconfig
@@ -563,6 +563,8 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_EXFAT_FS=y
+CONFIG_NTFS_FS=y
+CONFIG_NTFS_RW=y
 CONFIG_TMPFS=y
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
