--- a/arch/arm64/configs/cyanogenmod_kenzo_defconfig
+++ b/arch/arm64/configs/cyanogenmod_kenzo_defconfig
@@ -1,6 +1,6 @@
 CONFIG_SPEAKER_EXT_PA=y
 CONFIG_SPEAKER_EXT_PA_AW8738=y
-CONFIG_LOCALVERSION="-cyanogenmod"
+CONFIG_LOCALVERSION="-corporal"
 # CONFIG_SYSVIPC is not set
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
